Añadido pagina registro

--- a/CCM.App.Frontend/Pages/Residentes/Residentes.cshtml
+++ b/CCM.App.Frontend/Pages/Residentes/Residentes.cshtml
@@ -7,7 +7,7 @@
     <div class="form-group">
         <input type="text" name="filtroBusqueda" />
         <input type="submit" value="Buscar" />
-        <a class="btn btn-primary " asp-page="./Update">Agregar residente</a>
+        <a class="btn btn-primary " asp-page="./Update">Codigo Creativo - Agregar residente </a>
 </form></p>
 <br>
 <table class="table">
