--- a/CCM.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/CCM.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Residentes/Residentes">Residentes</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Registro/Registro">Registro</a>
+                        </li>
                     </ul>
                 </div>
             </div>
